complete chatroom interface

--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -4,13 +4,16 @@
 </h4>
 
 
+<!-- container of the page -->
 
 <div class="ui two column grid">
+    
+    <!-- chat block page -->
+    
     <div class="twelve wide column">
         <div class="ui fluid raised card chatbox">
-         <div class="content">
-            <div class="ui small feed">
-              <h4 class="ui header">Followers Activity</h4>
+          <div class="content">
+            <div class="ui feed">
               <div class="event">
                 <div class="content">
                   <div class="summary">
@@ -35,17 +38,32 @@
               <div class="event">
                 <div class="content">
                   <div class="summary">
-                     <a>Christian Rocha</a> signed up for the  site.
+                     <em>Christian Rocha</em> : Test message 
                   </div>
                 </div>
               </div>
             </div>
-        </div>
-      </div>    
+         </div>
+          <!-- writing message block -->
+          <div class="extra content">
+                <form class="ui reply form">
+                    <div class="field">
+                       
+                         <div class="ui fluid icon input">
+                             <input type="text" placeholder="Enter message...">
+                             <i class="borded inverted orange edit icon"></i>
+                         </div>
+                       
+                    </div>
+                </form>
+            </div>
+          <!-- // end writing message block -->
+       </div>    
     </div>
 
-
-
+  <!-- // end chat block page -->
+   
+   <!-- user menu -->
 
     <div class="four wide column">
         <div class="ui fluid raised card chatbox">
@@ -64,4 +82,7 @@
             </div>
         </div>
     </div>
+    <!-- // end user menu -->
 </div>
+
+<!-- // end container block -->
