--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -14,15 +14,9 @@
         <div class="ui fluid raised card chatbox">
           <div class="content">
             <div class="ui feed">
-              <% @messages.each do |message| %>    
-              <div class="event">
-                <div class="content">
-                  <div class="summary">
-                     <em><%= message.user.username.capitalize %></em> : <%= message.body %> 
-                  </div>
-                </div>
-              </div>
-              <% end %>
+           
+              <%= render @messages %>
+           
             </div>
          </div>
           <!-- writing message block -->
