--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,13 +13,11 @@
   <body>
     <div class="ui small inverted menu">
       <div class="ui container">
-        
-       <%= render 'layouts/navigation'  %>
-       
+       <%= render 'layouts/navigation'%>
       </div>
     </div>
-     
      <div class="ui container">
+        <%= render 'layouts/messages'%>
         <%= yield %>
      </div>
   </body>
