--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -21,16 +21,19 @@
          </div>
           <!-- writing message block -->
           <div class="extra content">
-                <form class="ui reply form">
+              <%= form_for(@message, html: {class: "ui reply form", role: "form"}, url: message_path) do |f| %>
+                
                     <div class="field">
                        
                          <div class="ui fluid icon input">
-                             <input type="text" placeholder="Enter message...">
-                             <i class="borded inverted orange edit icon"></i>
+                             <%= f.text_field :body, placeholder: "Enter message..." %>
+                             
+                             <%= f.button '<i class="borded inverted orange edit icon"></i>'.html_safe %>
                          </div>
                        
                     </div>
-                </form>
+            
+                <% end %>
             </div>
           <!-- // end writing message block -->
        </div>    
