--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -13,7 +13,7 @@
     <div class="twelve wide column">
         <div class="ui fluid raised card chatbox">
           <div class="content">
-            <div class="ui feed">
+            <div class="ui feed" id="message-container">
            
               <%= render @messages %>
            
@@ -21,7 +21,7 @@
          </div>
           <!-- writing message block -->
           <div class="extra content">
-              <%= form_for(@message, html: {class: "ui reply form", role: "form"}, url: message_path) do |f| %>
+              <%= form_for(@message, html: {class: "ui reply form", role: "form"}, url: message_path, remote: true) do |f| %>
                 
                     <div class="field">
                        
